--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Monster Mayhem</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style.css" type="text/css"/>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo de Tabuleiro</title>
+    <style>
+        #board {
+            display: grid;
+            grid-template-columns: repeat(10, 50px);
+            grid-template-rows: repeat(10, 50px);
+            gap: 1px;
+        }
+        .cell {
+            width: 50px;
+            height: 50px;
+            border: 1px solid #000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+        }
+        .red {
+            color: red;
+        }
+        .blue {
+            color: blue;
+        }
+        .selected {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
+    <h1>Jogo de Tabuleiro</h1>
+    <div>
+        <label for="player-select">Jogador: </label>
+        <select id="player-select">
+            <option value="1">Jogador 1</option>
+            <option value="2">Jogador 2</option>
+        </select>
+        <button id="move-button">Mover Peças</button>
 
-<div class="grid" id="grid"></div>
+        <label for="player-symbol">Símbolo: </label>
+        <select id="player-symbol">
+            <option value="G">G</option>
+            <option value="V">V</option>
+            <option value="W">W</option>
+        </select>
+    </div>
+    <div id="board"></div>
+    <button id="reset-button">Reiniciar Jogo</button>
 
-<script src="script.js"></script>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
+
