--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Tabuleiro</title>
+    <title>Board Game</title>
     <style>
         #board {
             display: grid;
@@ -32,16 +32,16 @@
     </style>
 </head>
 <body>
-    <h1>Jogo de Tabuleiro</h1>
+    <h1>Monster Fight</h1>
     <div>
-        <label for="player-select">Jogador: </label>
+        <label for="player-select">Player: </label>
         <select id="player-select">
-            <option value="1">Jogador 1</option>
-            <option value="2">Jogador 2</option>
+            <option value="1">Player 1</option>
+            <option value="2">Player 2</option>
         </select>
-        <button id="move-button">Mover Peças</button>
+        <button id="move-button">Move Monster</button>
 
-        <label for="player-symbol">Símbolo: </label>
+        <label for="player-symbol">Monster: </label>
         <select id="player-symbol">
             <option value="G">G</option>
             <option value="V">V</option>
@@ -49,7 +49,7 @@
         </select>
     </div>
     <div id="board"></div>
-    <button id="reset-button">Reiniciar Jogo</button>
+    <button id="reset-button">Reset</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
